# SCUNet_CoreML

./: .gitignore  README.md  pixi.toml  pyproject.toml
platypus_helpers/: scunet_coreml_helper.py
scripts/: install_platypus_helper.py
src/scunet_coreml/: __init__.py  core.py  export_coreml.py  model.py  setup_assets.py
tests/: test_model.py
